hphp/test/zend/bad/ext/reflection/tests/ReflectionClass_toString_001.php
<?php
$rc = new ReflectionClass("ReflectionClass");
echo $rc;
?>
